<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".SettingActivity">

    <item android:id="@+id/action_save"
          android:title="@string/menu_save"
          android:icon="@android:drawable/ic_menu_save"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_load"
          android:title="@string/menu_load"
          android:icon="@android:drawable/ic_menu_revert"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_clear"
          android:title="@string/menu_clear"
          android:icon="@android:drawable/ic_menu_delete"
          app:showAsAction="ifRoom"/>

</menu>