<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/switches_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:showIn="@layout/activity_setting"
            tools:context=".SettingActivity"
            android:padding="@dimen/fab_margin">

        <Switch
                android:id="@+id/master_switch"
                android:text="@string/master_switch_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textSize="24sp"/>
        <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="@dimen/fab_margin"
                android:background="?android:attr/listDivider"
                android:visibility="visible"/>
        <Switch
                android:id="@+id/switch_twosided"
                android:text="@string/switch_twosided_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textSize="18sp"/>
        <Switch
                android:id="@+id/switch_writingtask"
                android:text="@string/switch_writingtask_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textSize="18sp"/>
        <Switch
                android:id="@+id/switch_multiple"
                android:text="@string/switch_multiple_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textSize="18sp"/>
        <Switch
                android:id="@+id/switch_associate"
                android:text="@string/switch_associate_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:textSize="18sp"/>

    </LinearLayout>

    <android.support.design.widget.TabLayout
            android:id="@+id/categories_tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabMode="scrollable"
            app:layout_constraintTop_toBottomOf="@id/switches_list"
            app:layout_constraintStart_toStartOf="parent"/>
    <android.support.v4.view.ViewPager
            android:id="@+id/categories_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/categories_tabs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>
